# dockerfile-analyzer

./: Cargo.toml  LICENSE  README.md  dockerfile_analyzer.pyi  example.py  pyproject.toml  requirements-dev.txt
.github/workflows/: CI.yml
src/: analyzer.rs  constants.rs  lib.rs  models.rs  parse_utils.rs
