[package]
name = "dockerfile-analyzer"
version = "0.3.6"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dockerfile_analyzer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
docker-image = {version = "0.2.1"}
parse-dockerfile = { version = "0.1.2", default-features = false }
shlex = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
