[package]
name = "dockerfile-analyzer"
version = "0.3.20"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dockerfile_analyzer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.29.0"
docker-image = {version = "0.2.1"}
parse-dockerfile = { version = "0.1.7", default-features = false }
shlex = "2.0.1"
serde = { version = "1.0.228", features = ["derive"] }
